ft: Added a card class in the index.html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
 
             </div>
         </div>
+        <div class="card">
+
+        <div class="card card-title">
+            <h3>BRIEF HISTORY ABOUT GHANA AND AKAN NAMES</h3>
+        </div>
+        <div class="card-body">
+            <p>The Republic of Ghana is named after the <em>medieval West African Ghana Empire.</em>The empire became known in Europe and Arabia as the Ghana Empire after the 
+                title of its Emperor, <em>the Ghana.</em> <br>Akan names come from a traditional naming system for people from countries such
+                 as <strong>Togo, Ivory Coast and Ghana.</strong> </p>
+        </div>
+
+    </div>
+
+    <button id="btn">DISCOVER YOUR AKAN NAME</button>
     </div>
         
         
