ft: Added a hr property

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
         <div class="card-body">
             <p>The Republic of Ghana is named after the <em>medieval West African Ghana Empire.</em>The empire became known in Europe and Arabia as the Ghana Empire after the 
                 title of its Emperor, <em>the Ghana.</em> <br>Akan names come from a traditional naming system for people from countries such
-                 as <strong>Togo, Ivory Coast and Ghana.</strong> </p>
+                 as <strong>Togo, Ivory Coast and Ghana.</strong>You get your <span style="color: green;">AKAN NAME </span>depending on your gender and the day you were born. </p>
         </div>
 
     </div>
+    <hr id="hr-line">
 
     <button id="btn">DISCOVER YOUR AKAN NAME</button>
     </div>
