--- a/index2.html
+++ b/index2.html
@@ -6,8 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AKAN NAMES2</title>
     <link rel="stylesheet" href="/css/style2.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <img src="/images/ghana .jpg"  alt="" id="logo">
+
+            </div>
+            <div class="col-6">
+                <div class="col-6" id="akan">
+                    <h4><span style="color:red;">AKAN</span> NAMES</h4>
+
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
