pt: Modified and gave the hr a class name

--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
                     <h4><span style="color: red;">AKAN</span>NAMES</h4>
                 </div>
             </div>
-            <hr>
+            <hr id="line">
             <div class="form-fill">
                 <form id="validate">
                     <div>
