--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
 </head>
 <body>
 
-    <script src="/js/script.js"></script>
+    <!-- <script src="/js/script.js"></script> -->
 </body>
 </html>
