pt: Added min and max values in my form

--- a/index2.html
+++ b/index2.html
@@ -29,12 +29,12 @@
                 <form id="validate">
                     <div>
                      <label>DATE BORN</label><br>
-                     <input type="number" name="day" id="born" placeholder="Date born">
+                     <input type="number" min="1" max="31" name="day" id="born" placeholder="Date born">
                  </div>
 
                     <div class="month">
                      <label>MONTH BORN</label><br>
-                    <input type="number" name="day" id="month" placeholder="Month born">
+                    <input type="number" min="1" max="12" name="day" id="month" placeholder="Month born">
                 </div>
                 <div class="year">
                 <label>YEAR BORN</label><br>
