ft: Added a math formula to calculate the day

--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
             </div>
             <hr id="line">
             <div class="form-fill">
-                <form id="validate">
+                <form id="validate" onsubmit="calculate()">
                     <div>
                      <label>DATE BORN</label><br>
                      <input type="number" min="1" max="31" name="day" id="born" placeholder="Date born">
