ft: Modified the form by adding a function myLogin

--- a/index2.html
+++ b/index2.html
@@ -44,7 +44,7 @@
                      <!-- <input type="text" name="name"> -->
                      <div>
                      <select name="gender" id="gender">
-                         <option value="">GENDER</option>
+                         <option value=""></option>
                          <option value="male">MALE</option>
                          <option value="female">FEMALE</option>
                      </select>
