--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <img src="/images/ghana .jpg"  alt="" id="logo">
+                <img src="images/ghana .jpg"  alt="" id="logo">
 
             </div>
             <div class="col-6">
