--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-6">
-                <img src="/images/ghana .jpg"  alt="" id="logo">
+                <img src="ghana .jpg"  alt="" id="logo">
 
             </div>
             <div class="col-6" id="akan">
