--- a/index2.html
+++ b/index2.html
@@ -46,7 +46,7 @@
                     </div>
                     <div>
                         <select name="gender" id="gender">
-                            <option value=""></option>
+                            <option value="">Gender</option>
                             <option value="male" id="male">MALE</option>
                             <option value="female" id="female">FEMALE</option>
                         </select>
